# miri

./: Cargo.toml  README.md  install.sh  miri.service
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  miri_commands.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs
service/: Cargo.toml
service/src/: lib.rs  main.rs  niri_ipc_utils.rs  service_state.rs
service/src/mode_logic/: master.rs
src/: config.rs  ipc.rs  lib.rs  main.rs  master.rs  miri_commands.rs  miri_overrides.rs  miri_socket.rs  niri_ipc_utils.rs  niri_socket.rs  scroll.rs  service.rs  service_state.rs
src/layout/: master.rs
