[package]
name = "miri"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
config = { version = "0.15.19", features = ["toml"] }
niri-ipc = "25.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "miri"
path = "src/bin/miri.rs"

[[bin]]
name = "miri_service"
path = "src/bin/miri_service.rs"
