[package]
name = "miri"
version = "0.1.0"
edition = "2024"

[dependencies]
niri-ipc = "25.11.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.58", features = ["derive"] }
config = { version = "0.15.19", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
